k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: particle41-app
  namespace: particle41
  labels:
    app: particle41-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: particle41-app

  template:
    metadata:
      labels:
        app: particle41-app

    spec:
      containers:
        - name: particle41-app

          image: 635352382890.dkr.ecr.us-east-1.amazonaws.com/particle41-dev-ecr:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              cpu: 200m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi
