k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: particle41-service
  namespace: particle41

spec:
  type: ClusterIP

  selector:
    app: particle41-app

  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
