k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: particle41-ingress
  namespace: particle41

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    alb.ingress.kubernetes.io/healthcheck-path: /health

    alb.ingress.kubernetes.io/success-codes: "200"

    alb.ingress.kubernetes.io/load-balancer-name: particle41-alb

spec:

  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: particle41-service

                port:
                  number: 80
